[package]
name = "ap-physics-projectile-drag"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.10.0", features = ["image", "svg"] }
plotters = "0.3.5"
rgb = "0.8.37"
